--- a/PasswordExercise/PasswordExercise.csproj
+++ b/PasswordExercise/PasswordExercise.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPasswordGenerator.cs" />
     <Compile Include="PasswordGenerator.cs" />
+    <Compile Include="PasswordRequirements.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
