Alternate sollution - checking after generation

--- a/PasswordExercise/PasswordExercise.csproj
+++ b/PasswordExercise/PasswordExercise.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckResult.cs" />
+    <Compile Include="ErrorMessage.cs" />
     <Compile Include="IPasswordGenerator.cs" />
     <Compile Include="PasswordGenerator.cs" />
     <Compile Include="PasswordRequirements.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringRequirementChecker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
