--- a/PasswordExercise.Test/PasswordExercise.Test.csproj
+++ b/PasswordExercise.Test/PasswordExercise.Test.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PasswordGeneratorTests.cs" />
+    <Compile Include="PasswordRequirementsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
